add vendor lib to CMakeLists.txt

--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -33,10 +33,48 @@ set(FLAGS
   -ffunction-sections
   -fdata-sections
   -fno-common
-)  
+)
+#-imultilib rv32imac_xw/ilp32
 #################################################################
 
-#-imultilib rv32imac_xw/ilp32
+#################################################################
+set(vendor_src
+  ${vendor_dir}/ch32x035_adc.c
+  ${vendor_dir}/ch32x035_dma.c
+  ${vendor_dir}/ch32x035_gpio.c
+  ${vendor_dir}/ch32x035_misc.c
+  ${vendor_dir}/ch32x035_rcc.c
+  ${vendor_dir}/ch32x035_usart.c
+  ${vendor_dir}/ch32x035_awu.c
+  ${vendor_dir}/ch32x035_exti.c
+  ${vendor_dir}/ch32x035_i2c.c
+  ${vendor_dir}/ch32x035_opa.c
+  ${vendor_dir}/ch32x035_spi.c
+  ${vendor_dir}/ch32x035_wwdg.c
+  ${vendor_dir}/ch32x035_dbgmcu.c
+  ${vendor_dir}/ch32x035_flash.c
+  ${vendor_dir}/ch32x035_iwdg.c
+  ${vendor_dir}/ch32x035_pwr.c
+  ${vendor_dir}/ch32x035_tim.c
+  ${vendor_dir}/core_riscv.c
+  ${vendor_dir}/startup_ch32x035.S
+  ${debug_dir}/debug.c
+)
+
+add_library(vendor
+  ${vendor_src}
+)
+
+target_include_directories(vendor PUBLIC
+  "${vendor_dir}"
+  "${debug_dir}"
+)
+
+target_compile_options(vendor PRIVATE
+  ${FLAGS}
+)
+#################################################################
+
 #
 # TODO
 #
