add impl for Mcu::nvic_config

--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -4,41 +4,15 @@ project(TESTS)
 
 set(cur_dir     "${CMAKE_CURRENT_SOURCE_DIR}")
 set(root_dir    "${CMAKE_CURRENT_SOURCE_DIR}/..")
-#set(include_dir "${root_dir}/include")
+set(include_dir "${root_dir}/include")
 set(src_dir     "${root_dir}/src")
-#set(ds1302_dir  "${src_dir}/ds1302")
+set(vendor_dir  "${root_dir}/vendor")
+set(debug_dir   "${root_dir}/debug")
 
 list(APPEND CMAKE_MODULE_PATH "${cur_dir}/cmake")
 find_package(UnitTest++ REQUIRED)
 
 add_compile_definitions(UNITTEST)
-
-###################################################################
-#set(ds1302_src
-#  ${ds1302_dir}/Command.cpp
-#  ${ds1302_dir}/Data.cpp
-#  ${ds1302_dir}/Seconds.cpp
-#  ${ds1302_dir}/Minutes.cpp
-#  ${ds1302_dir}/Hour.cpp
-#  ${ds1302_dir}/Date.cpp
-#  ${ds1302_dir}/Month.cpp
-#  ${ds1302_dir}/Day.cpp
-#  ${ds1302_dir}/Year.cpp
-#  ${ds1302_dir}/WriteProtect.cpp
-#)
-#
-#add_library(ds1302
-#  ${ds1302_src}
-#)
-#
-#target_include_directories(ds1302 PUBLIC
-#  "${include_dir}"
-#)
-#
-#if("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
-#  target_compile_options(ds1302 PRIVATE -pipe -g -W -Wall -Wextra)
-#endif()
-###################################################################
 
 ###################################################################
 #file(GLOB dumb_src "${dumb_dir}/*.cpp")
@@ -68,6 +42,9 @@ add_library(src
 
 target_include_directories(src PUBLIC
   "${src_dir}"
+  "${vendor_dir}"
+  "${include_dir}"
+  "${debug_dir}"
 )
 
 if("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
