--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ set(src_src
   ${src_dir}/Mcu.cpp
   ${src_dir}/PinConf.cpp
   ${src_dir}/PortPin.cpp
+  ${src_dir}/PortClockToggler.cpp
 )
 
 add_library(src
