begin impl for Gpio::init

--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ set(src_src
   ${src_dir}/PortPin.cpp
   ${src_dir}/PortClockToggler.cpp
   ${src_dir}/RccApb2Holder.cpp
+  ${src_dir}/Gpio.cpp
 )
 
 add_library(src
