add impl for PinHolder::get

--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -39,6 +39,7 @@ set(src_src
   ${src_dir}/PortClockToggler.cpp
   ${src_dir}/RccApb2Holder.cpp
   ${src_dir}/Gpio.cpp
+  ${src_dir}/PinHolder.cpp
 )
 
 add_library(src
