add impl for ctor for LedConf

--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -35,6 +35,7 @@ add_compile_definitions(UNITTEST)
 set(core_src
   ${core_dir}/Mcu.cpp
   ${core_dir}/PinConf.cpp
+  ${core_dir}/LedConf.cpp
   ${core_dir}/PortPin.cpp
   ${core_dir}/PortClockToggler.cpp
   ${core_dir}/RccApb2Holder.cpp
