--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -87,7 +87,7 @@ set(core_src
   ${core_dir}/PinConf.cpp
   ${core_dir}/PinHolder.cpp
   ${core_dir}/PortHolder.cpp
-  ${core_dir}/PortPin.cpp
+  ${core_dir}/PortPinConf.cpp
   ${core_dir}/RccApb2Holder.cpp
   ${core_dir}/PrintConf.cpp
   ${core_dir}/LedConf.cpp
