--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -37,7 +37,7 @@ set(core_src
   ${core_dir}/PinConf.cpp
   ${core_dir}/LedConf.cpp
   ${core_dir}/LedPinConf.cpp
-  ${core_dir}/PortPin.cpp
+  ${core_dir}/PortPinConf.cpp
   ${core_dir}/PortClockToggler.cpp
   ${core_dir}/RccApb2Holder.cpp
   ${core_dir}/Gpio.cpp
