add impl for ctor for Pin

--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -93,6 +93,7 @@ set(core_src
   ${core_dir}/LedConf.cpp
   ${core_dir}/LedPinConf.cpp
   ${core_dir}/Led.cpp
+  ${core_dir}/Pin.cpp
 )
 
 add_library(core
