--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -46,6 +46,8 @@ set(core_src
   ${core_dir}/PortHolder.cpp
   ${core_dir}/PrintConf.cpp
   ${core_dir}/Led.cpp
+  ${core_dir}/Pin.cpp
+  ${core_dir}/Gpio.cpp
 )
 
 add_library(core
