add impl for Counter

--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -123,6 +123,7 @@ set(src
   ${src_dir}/Tubes.cpp
   ${src_dir}/Anodes.cpp
   ${src_dir}/Cathodes.cpp
+  ${src_dir}/Counter.cpp
 )
 
 add_executable(${name}.elf
