add impl for ctor for WorkLed

--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -124,6 +124,7 @@ set(src
   ${src_dir}/Anodes.cpp
   ${src_dir}/Cathodes.cpp
   ${src_dir}/Counter.cpp
+  ${src_dir}/WorkLed.cpp
 )
 
 add_executable(${name}.elf
