--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -36,6 +36,7 @@ set(FLAGS
   -ffunction-sections
   -fdata-sections
   -fno-common
+  -fverbose-asm
 )
 #################################################################
 
