--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ set(core_src
   ${core_dir}/PinRx.cpp
   ${core_dir}/PinTx.cpp
   ${core_dir}/UartConf.cpp
+  ${core_dir}/Uart.cpp
 )
 
 add_library(core
