--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -52,6 +52,7 @@ set(core_src
   ${core_dir}/PinTx.cpp
   ${core_dir}/UartConf.cpp
   ${core_dir}/Uart.cpp
+  ${core_dir}/UsartHolder.cpp
 )
 
 add_library(core
