--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ set(core_src
   ${core_dir}/UartConf.cpp
   ${core_dir}/Uart.cpp
   ${core_dir}/UsartHolder.cpp
+  ${core_dir}/RccUsartHolder.cpp
 )
 
 add_library(core
