--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -38,7 +38,7 @@ set(core_src
   ${core_dir}/LedConf.cpp
   ${core_dir}/LedPinConf.cpp
   ${core_dir}/PortPinConf.cpp
-  ${core_dir}/PortClockToggler.cpp
+  ${core_dir}/ClockToggler.cpp
   ${core_dir}/RccApb2Holder.cpp
   ${core_dir}/Gpio.cpp
   ${core_dir}/PinHolder.cpp
