--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -48,10 +48,11 @@ set(core_src
   ${core_dir}/Led.cpp
   ${core_dir}/Pin.cpp
   ${core_dir}/Gpio.cpp
-  ${core_dir}/PinRx.cpp
-  ${core_dir}/PinTx.cpp
+  ${core_dir}/PinRxConf.cpp
+  ${core_dir}/PinTxConf.cpp
   ${core_dir}/UartConf.cpp
   ${core_dir}/Usart.cpp
+  ${core_dir}/Uart.cpp
   ${core_dir}/UsartHolder.cpp
   ${core_dir}/RccUsartHolder.cpp
 )
