--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -96,8 +96,8 @@ set(core_src
   ${core_dir}/LedPinConf.cpp
   ${core_dir}/Led.cpp
   ${core_dir}/Pin.cpp
-  ${core_dir}/PinRx.cpp
-  ${core_dir}/PinTx.cpp
+  ${core_dir}/PinRxConf.cpp
+  ${core_dir}/PinTxConf.cpp
   ${core_dir}/UartConf.cpp
   ${core_dir}/Usart.cpp
   ${core_dir}/UsartHolder.cpp
