add impl for ctor for LedTask

--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -81,6 +81,7 @@ set(src_src
   ${src_dir}/Configurator.cpp
   ${src_dir}/LedBlock.cpp
   ${src_dir}/LedTaskTime.cpp
+  ${src_dir}/LedTask.cpp
 )
 
 add_library(src
