add impl for ctor for LedBlockControl

--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -85,6 +85,7 @@ set(src_src
   ${src_dir}/DisplayTime.cpp
   ${src_dir}/Cathodes.cpp
   ${src_dir}/Tubes.cpp
+  ${src_dir}/LedBlockControl.cpp
 )
 
 add_library(src
