--- a/firmware/source/tests/CMakeLists.txt
+++ b/firmware/source/tests/CMakeLists.txt
@@ -74,6 +74,7 @@ endif()
 
 ###################################################################
 set(src_src
+  ${src_dir}/Counter.cpp
   ${src_dir}/McuNetConfig.cpp
   ${src_dir}/TimeChecker.cpp
   ${src_dir}/Time.cpp
