add impl for ctor for Hour

--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -178,6 +178,7 @@ set(src
   ${src_dir}/LedTask.cpp
   ${src_dir}/KeyBlockReactor.cpp
   ${src_dir}/LedTaskTime.cpp
+  ${src_dir}/Hour.cpp
 )
 
 add_executable(${name}.elf
