add impl for ctor for SecondsCounter

--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -186,6 +186,7 @@ set(src
   ${src_dir}/Esp12f.cpp
   ${src_dir}/EspReceiveBuffer.cpp
   ${src_dir}/InternetTime.cpp
+  ${src_dir}/SecondsCounter.cpp
 )
 
 add_executable(${name}.elf
