add impl for ctor for TimeStringExtractor

--- a/firmware/source/CMakeLists.txt
+++ b/firmware/source/CMakeLists.txt
@@ -187,6 +187,7 @@ set(src
   ${src_dir}/EspReceiveBuffer.cpp
   ${src_dir}/InternetTime.cpp
   ${src_dir}/SecondsCounter.cpp
+  ${src_dir}/TimeStringExtractor.cpp
 )
 
 add_executable(${name}.elf
